[package]
name = "blockyspot"
version = "0.1.0"
edition = "2024"
authors = ["BlockySpot Team"]
description = "A modifiable Spotify Connect client using librespot"

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-connect = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3" 
