[package]
name = "blockyspot"
version = "0.1.0"
edition = "2021"
authors = ["BlockySpot Team"]
description = "A modifiable Spotify Connect client using librespot"

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-connect = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] } 
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] } 
